--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,173 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navbar{
   display: flex;
-  flex-direction: column;
   align-items: center;
+  justify-content: space-between;
+  /* background-color: black; */
+  /* color: white; */
+  border-bottom: 1px solid rgb(224, 218, 218);
+}
+
+.navbar ul{
+  display: flex;
+  padding: 20px;
+  padding-right: 70px;
+}
+
+.navbar ul li{
+  list-style-type: none;
+  padding: 15px;
+  font-size: 25px;
+}
+
+.navbar h1 {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.product-content{
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  align-items: center;
+ 
+}
+
+.product_container{
+   display: block;
+   /* border: 1px solid rgb(209, 200, 200); */
+   margin: 20px;
+   margin-left: 40px;
+   margin-right: 40px;
+   width: 300px;
+   box-shadow: 2px 2px 2px rgb(160, 157, 157);
+}
+
+.products_container{
+  padding: 20px;
+  /* margin-left: 10px; */
+  margin-top: 100px;
+  display: grid;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+}
+
+.product_price{
+  margin-left: 10px;
+  color: rgb(22, 0, 0);
+}
+
+.product_name{
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+}
+
+.detail__product{
+  display: flex;
+  margin-top: 50px;
+  margin-left: 100px;
+  border: 1px solid rgb(179, 176, 176);
+  width: 70%;
+  padding: 20px;
+}
+
+.detail__content{
+  display: block;
+  margin-left: 50px;
+}
+
+.detail__productImage{
+  width: 100%;
+  max-width: 500px;
+  height: auto;
+
+}
+
+.detail__button{
+  margin-top: 250px;
+  margin-left: 20px;
+  padding: 10px 40px;
+  border: none;
+  background-color: rgb(248, 121, 17);
   color: white;
+  font-size: 18px;
+  cursor: pointer;
+  box-shadow: 2px 2px 2px rgb(155, 155, 155);
 }
 
-.App-link {
-  color: #61dafb;
+.detail__name{
+font-family:sans-serif;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.detail__price{
+padding-top: 20px;
+}
+
+.cart__products{
+  width: 700px;
+  /* border: 1px solid black; */
+  display: block;
+  margin-left: 200px;
+  margin-top: 50px;
+}
+.cart__content{
+ display: flex;
+ border: 1px solid black;
+ padding: 10px;
+ margin: 10px;
+ justify-content: space-between;
+}
+
+.cart__image{
+  height: 100px;
+}
+
+.cart__container{
+  display: flex;
+}
+
+.quantity_btn{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.total__container{
+  /* border: 1px solid black; */
+  margin-left: 50px;
+  padding: 30px;
+  margin-top: 50px;
+  /* display: block; */
+  height: 200px;
+  box-shadow: 4px 6px 8px rgb(235, 231, 231);
+}
+
+.cart_text{
+  margin-right: 30px;
+  font-family:cursive;
+  font-size: 13px;;
+}
+.total{
+  margin-top: 80px;
+  font-size: 20px;
+  font-family: cursive;
+}
+@media only screen and (max-width: 600px) {
+  .logo_heading{
+    font-size: 15px;
   }
-  to {
-    transform: rotate(360deg);
+  .navbar ul li{
+    font-size: 20px;
+  }
+  .detail__product{
+    display: block;
+    justify-content: center;
+    align-items: center;
+    margin-left: 50px;
+  }
+  .cart__container{
+    display: block;
+  }
+  .card__product{
+    width: 200px;
   }
 }
